cmake_minimum_required(VERSION 3.29)
project("clion")

set(CMAKE_CXX_STANDARD 14)

add_subdirectory (Homework/Homework1)
add_subdirectory (Homework/Homework2)
add_subdirectory (Homework/Homework3)
add_subdirectory (Homework/Homework4)
add_subdirectory (Homework/Homework5)
add_subdirectory (Homework/Homework6)
add_subdirectory (luogu)
add_subdirectory (luogu/luogu1)
add_subdirectory (luogu/luogu2)
add_subdirectory (luogu/luogu3)
add_subdirectory (BountyOrder/BountyOrder0)
add_subdirectory (BountyOrder/BountyOrder1)
add_subdirectory (BountyOrder/BountyOrder2)
add_subdirectory (BountyOrder/BountyOrder3)
add_subdirectory (BountyOrder/BountyOrder4)
add_subdirectory (BountyOrder/BountyOrder5)
add_subdirectory (BountyOrder/BountyOrder6)
add_subdirectory (course/course1)
add_subdirectory (course/course2)
