add_executable(A6-3 多个分数的加法.cpp)
add_executable(A6-4 多个数的最大公约数.cpp)
add_executable(A6-2 分数的加法.cpp)
add_executable(A1-4 今年过去了多少天.cpp)
add_executable(p1183 五角大楼.cpp)
add_executable(p1185 永生诅咒.cpp)
add_executable(A7-2 数组的极值函数.cpp)
add_executable(A7-3 数组的极值下标函数.cpp)
add_executable(A7-4 数组的查找函数.cpp)
add_executable(A7-5 数组的有序插入函数.cpp)
add_executable(A7-6 数组的左移函数.cpp)
add_executable(A7-7 数组的右移函数.cpp)
add_executable(A9-1 数组中的素数个数.cpp)
add_executable(A9-2 数组中最小正数的下标.cpp)
add_executable(A9-3 数组中最大的负数.cpp)
add_executable(A9-4 数组中第二大的数.cpp)




