add_executable(H1-1 多个分数的加法.cpp)
add_executable(H1-2 多个数的最大公约数.cpp)
add_executable(H1-3 分数的加法.cpp)
add_executable(H1-4 今年过去了多少天.cpp)
add_executable(p1183 五角大楼.cpp)
add_executable(p1185 永生诅咒.cpp)
add_executable(H1-5 数组的极值函数.cpp)
add_executable(H1-6 数组的极值下标函数.cpp)
add_executable(H1-7 数组的查找函数.cpp)
add_executable(H1-8 数组的有序插入函数.cpp)
add_executable(H1-9 数组的左移函数.cpp)
add_executable(H1-10 数组的右移函数.cpp)
add_executable(H1-11 数组中的素数个数.cpp)
add_executable(H1-12 数组中最小正数的下标.cpp)
add_executable(H1-13 数组中最大的负数.cpp)
add_executable(H1-14 !数组中第二大的数.cpp)
add_executable(H1-15 数组中最小值的个数.cpp)
add_executable(H1-16 数组中递增子序列的个数.cpp)
add_executable(H1-17 数组中所有极大值.cpp)



