add_executable(H5-1 进制转换1.cpp)
add_executable(H5-2 进制转换2.cpp)
add_executable(H5-3 排序与删除.cpp)
add_executable(H5-4 计算日期.cpp)
add_executable(H5-5 多项式求导.cpp)
add_executable(H5-6 多喝饮料.cpp)
add_executable(H5-7 计算阶乘位数.cpp)
add_executable(H5-8 情诗暗示.cpp)
add_executable(H5-9 说反话.cpp)
add_executable(H5-10 连续数之和.cpp)
add_executable(H5-11 合并果子.cpp)
add_executable(H5-12 字符串还原.cpp)